css/styles.css
/* ... */
#section-4-home > div:nth-child(2) > p:nth-child(2) {
    margin-top: -10px;
    margin-bottom: 70px;
}

#section-4-home h2 {
    transform: rotate(270deg);
    position: absolute;
    left: -480px;
    margin-top: 570px;
    font-size: 98px;
}

/*** HOME SECTION 5 ***/
#section-5-home {
    background-image: url("../img/pink-blue-bg.jpg");
    margin-top: -70px;
    display: flex;
    justify-content: space-between;
    padding-right: 20px;
    padding-left: 10px;
    background-position-x: center;
}

.pink-fill-text {
    font-family: shapiro-95;
    color: #f47daf;
}

#donut-tower {
    height: 900px;
    width: auto;
}

#blue-sparks {
    width: 160px;
    height: auto;
    margin-top: 50px;
}

.donut-sketch {
    width: 60px;
    height: auto;
    margin-top: 15px;
}

.donut-sketch-container {
    display: flex;
    flex-direction: column;
}

#section-5-home > div:nth-child(1) {
    display: flex;
    flex-direction: row;
    align-items: flex-end;
    margin-bottom: 10px;
}

#section-5-home > div:nth-child(2) {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    margin-top: 70px;
    justify-content: space-between;
}

.left-justified-container {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
}

#section-5-home > div:nth-child(2) > div:nth-child(2) {
    margin-right: 60px;
    margin-bottom: 250px;
}

#section-5-home > div:nth-child(2) > div:nth-child(2) h2 {
    text-align: right;
    width: 700px;
    line-height: 90px;
}

#section-5-home p {
    margin-top: -20px;
    margin-bottom: 50px;
}

#section-5-home button {
    align-self: revert;
}

#section-5-home > div:nth-child(1) > div:nth-child(2) {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    align-self: flex-start;
    margin-top: 230px;
    margin-left: 70px;
}

/*** HOME SECTION 6 ***/
#section-6-home {
    background-image: url("../img/pink-teal-donuts-bg.jpg");
    background-size: cover;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    background-position-x: center;
}

#section-6-home h2 {
    margin-top: 0;
    margin-bottom: 35px;
}

#section-6-home > div:nth-child(1) {
    padding-top: 50px;
    padding-left: 20px;
}

#section-6-home > div:nth-child(2) {
    display: flex;
    justify-content: center;
}

#section-6-home button {
    margin-top: -235px;
}

#section-6-home-btn {
    background-color: #f6c4e9;
    background-image: revert;
}

#section-6-home-btn:hover {
    background-color: #f1bde3;
}

#section-6-home p {
    margin-right: 45px;
}

/*** HOME SECTION 7 ***/
#section-7-home {
    background-color: black;
    background-image: url("../img/teal-donuts-bg-darkened.jpg");
    background-size: cover;
    background-position-x: center;
    background-position-y: center;
    color: white;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    background-attachment: fixed;
    background-repeat: no-repeat;
}

#section-7-home h2 {
    font-family: shapiro-95;
    margin-left: 20px;
    margin-right: 20px;
}

#section-7-home p {
    color: white;
    margin-left: 20px;
    margin-right: 20px;
}

/*** HOME SECTION 8 ***/
#section-8-home {
    background-image: linear-gradient(to right, rgba(255, 255, 255, 0), white), url("../img/gift-donut-bg.jpg");
    background-size: contain;
    background-size: 900px;
    background-repeat: no-repeat;
    background-position-y: bottom;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    justify-content: center;
    text-align: right;
    padding-right: 50px;
}

#section-8-home > div {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: flex-end;
    height: 600px;
}

#section-8-home button {
    align-self: flex-end;
}

/*** MENU ***/

#menu h1,
#order h1
{
    font-size: 100px;
    margin: 0;
    position: relative;
    z-index: 100;
}

#section-1-menu,
#section-1-order
{
    background-image: url("../img/pink-yellow-blue-donuts-bg.jpg");
    height: 300px;
    width: 100%;
    margin-top: 0px;
    color: white;
    top: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    background-attachment: fixed;
    background-size: cover;
    background-position-x: center;
    background-position-y: -300px;
    background-repeat: no-repeat;
}

#section-2-menu {
    display: flex;
    justify-content: center;
    background-size: contain;
    background-image: url("../img/donut-print.jpg");
}

/*** ORDER ***/
#section-2-order {
    background-image: url("../img/donut-print.jpg");
    background-size: 100vw;
    text-align: center;
    height: 90vh;
    margin-top: -50px;
}

#section-2-order p {
    font-size: 30px;
    padding: 70px 50px 0 50px;
}

.food-menu {
    height: auto;
    position: relative;
    width: 900px;
    margin-top: 40px;
    margin-bottom: 80px;
}

.food-menu:hover {
    cursor: zoom-in;
}

.food-menu-zoom-in {
    position: absolute;
    top: 0;
    width: 100vw;
    z-index: 100;
}

.food-menu-zoom-in:hover {
    cursor: zoom-out;
}

/*** FOOTER ***/

footer {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    background-color: #f1d8e2;
    height: 50px;
}

footer div {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding-left: 15px;
}

footer nav ul {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    list-style: none;
    font-family: shapiro-75;
    position: relative;
    z-index: 1;
    font-size: 14px;
    padding-right: 70px;
    margin-top: -3px;
}

footer nav ul a {
    text-decoration: none;
    padding-left: 20px;
    color: #df7aa4;
    transition: all ease-in-out 0.5s;
}

footer nav ul a:hover {
    color: #eea3c2;
}

#copyright-box p {
    font-size: 16px !important; /* Override general text media queries */
}
/* ... */

